<resources>
    <string name="app_name">NEWINDIALMS</string>
    <string name="about_us">About Us</string>
    <string name="about_us_message">NewIndiaLMS is an university based android Application project designed to track feedback on daily basis.</string>
    <string name="about_us_button">OK</string>
    <string name="mainscreen_heading">LM Thapar School of Management</string>
    <string name="mainscreen_subheading">New India LMS APP 01</string>
    <string name="mainscreen_details">NewIndiaLMS is an university based android Application project designed to track feedback on daily basis.</string>
    <string name="mainscreen_register">Register</string>
    <string name="mainscreen_Login">Login</string>
    <string name="new_india_lms">New India LMS APP</string>
    <string name="registration_heading">Great.Lets create your Account.</string>
    <string name="registration_id">EmployeeID/StudentID</string>
    <string name="registration_phone">Phone Number</string>
    <string name="registration_email">EmailAddress</string>
    <string name="registration_passsword">Password</string>
    <string name="registration_select">Select One Type</string>
    <string name="registration_radio1">FacultyStaff</string>
    <string name="registration_radio2">student</string>
    <string name="registration_button">Register</string>
    <string name="one_time_password">One Time Password</string>
    <string name="enter_otp">Enter the OTP</string>
    <string name="registration_error_missingfields_title">Error</string>
    <string name="registration_error_missingfields_text">Please fill in all the fields</string>
    <string name="registration_error_missingspinner_text">Select the values</string>
    <string name="registration_server_response">Success</string>
    <string name="login_heading">Let\'s start by signing you in</string>
    <string name="login_id">EmployeeID/StudentID</string>
    <string name="login_phone">Phone Number</string>
    <string name="login_button">SignIn</string>
    <string name="login_signup">New User Signup?</string>
    <string name="thankyou_logo">Thank you</string>
    <string name="welcome">Welcome</string>
    <string name="success_verification">Congratulations,You have successfully verified your phone number</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_studentid">StudentId</string>
    <string name="programid">Program Manager</string>
    <string name="navigation_program_courselist">Course List</string>
    <string name="navigation_program_schedule">Course Schedule</string>
    <string name="navigation_program_calendar">Academic Calendar</string>
    <string name="navigation_program_picbook">Student Picture Book</string>
    <string name="navigation_program_addcourse">Add Course</string>
    <string name="navigation_program_removecourse">Remove Course</string>
    <string name="navigation_program_enrollstudent">Student View</string>
    <string name="navigation_program_enrollfaculty">Faculty View</string>
    <string name="navigation_program_feedback">Feedback Module</string>
    <string name="navigation_program_notification">Notification</string>
    <string name="navigation_program_directory">Directory</string>
    <string name="navigation_program_logout">Logout</string>
    <string name="removecourse_name">Name</string>
    <string name="removecourse_code">Code</string>
    <string name="homescreen_notification">Notification</string>
    <string name="homescreen_subnotification">View Notifications</string>
    <string name="homescreen_courselist">Course List</string>
    <string name="homescreen_subcourselist">List of all Courses.</string>
    <string name="homescreen_calendar">Calendar</string>
    <string name="homescreen_subcalendar">My Schedules</string>
    <string name="homescreen_feedback">Feedback</string>
    <string name="homescreen_subfeedback">View All Feedbacks.</string>
    <string name="homescreen_logout">Logout</string>
    <string name="homescreen_sublogout">Log out of the app?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">ADD</string>
    <string name="cardviewCourselistTitle">Course List </string>
    <string name="cardviewCourselistFaculty">Faculty </string>
    <string name="floatingcoursedialog_title">Add Course List</string>
    <string name="floatingdialog_course">Enter the Course Name </string>
    <string name="floatingdialog_faculty">Enter the Faculty Name</string>
    <string name="enrollstudenttitle">Enroll Student </string>
    <string name="enrollstudent">Enroll Students </string>
    <string name="disenrollstudent">Disennroll Students </string>
    <string name="enrollrollnumber">Roll No </string>
    <string name="enrolllastname">Last Name</string>
    <string name="enrollfirstname">First Name</string>
    <string name="enrollphonenumber">Phone Numbers</string>
    <string name="enrollemailaddress">Email Address</string>
    <string name="enrollprogram">Program</string>
    <string name="enrollyearofjoining">Year of Joining</string>
    <string name="enrollyearofgraduation">Year of Graduation</string>
    <string name="all_student_records">Student Records </string>
    <string name="delete_student_records">Delete Record </string>
    <string name="textFirstName">Name Show Here </string>
    <string name="textRollno">Roll No Show Here</string>
    <string name="textPhone">Phone Show Here</string>
    <string name="buttonDelete">Delete</string>
    <string-array name="yearofjoining">
        <item></item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string-array name="yearofgraduation">
        <item></item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="yeartype">
        <item>Choose Year</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="enrollfacultytitle">Enroll Faculty </string>
    <string name="enrollfaculty">Enroll Faculty </string>
    <string name="disenrollfaculty">Disennroll Faculty </string>
    <string name="enrollemployeeid">Employee Id </string>
    <string name="enrolldesignation">Designation</string>
    <string name="disenrollfaculty_toolbar_title">DisEnroll Faculty</string>
    <string name="all_faculty_records">Faculty Records </string>
    <string name="delete_faculty_records">Delete Record </string>
    <string name="textDesignation">Phone Show Here</string>
    <string name="faculty_program">Faculty Program</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="faculty_rollno">Faculty Rollno</string>
    <string name="faculty_code">Faculty Code</string>
    <string name="faculty_specialization">Faculty Specialization</string>
    <string name="notificiation_Title">Notification</string>
    <string name="email_button">Email</string>
    <string name="notificiation_button">Notification</string>
    <string name="notification_email_title">Send Email</string>
    <string name="notification_email_to">To:</string>
    <string name="notification_email_subject">Subject:</string>
    <string name="notification_email_message">Message:</string>
    <string name="emailid">Email Address</string>
    <string name="message">Enter your Message</string>
    <string name="notification_email_button">Send</string>
    <string name="FCM_PREF">edu.thapar.newindialms.fcm_pref</string>
    <string name="FCM_TOKEN">edu.thapar.newindialms.fcm_token</string>
    <string name="calendar_notification">Send Academic Calendar</string>
    <string name="faculty_notification">Send Faculty Notification</string>
    <string name="student_notifications">Send Student Notification</string>
    <string name="send_faculty_notification_title">Faculty Notification</string>
    <string name="send_faculty_notification_subtitle">Title</string>
    <string name="send_faculty_notification_subtitle_hint">Enter Title Here</string>
    <string name="send_faculty_notification_subtitle_message">Message</string>
    <string name="send_faculty_notification_subtitle_message_hint">Enter Message Here</string>
    <string name="send_student_notification_title">Student Notification</string>
    <string name="send_student_notification_subtitle">Title</string>
    <string name="send_student_notification_subtitle_hint">Enter Title Here</string>
    <string name="send_student_notification_subtitle_message">Message</string>
    <string name="send_student_notification_subtitle_message_hint">Enter Message Here</string>
    <string name="faculty_notificationscreen_title">My Notification Screen</string>
    <string name="faculty_notificationscreen_msgtitle">Notification Title</string>
    <string name="faculty_notificationscreen_msg">Notification Message</string>
    <string name="faculty_notificationscreen_msgtime">Notification Time</string>
    <string name="faculty_notificationscreen_msgbutton">Details</string>
    <string name="faculty_notificationscreen_sendnotification">Send Notification</string>
    <string name="faculty_notifications">Faculty notification</string>
    <string name="student_notificationscreen_title">My Notification Screen</string>
    <string name="student_notificationscreen_msgtitle">Notification Title</string>
    <string name="student_notificationscreen_msg">Notification Message</string>
    <string name="student_notificationscreen_msgtime">Notification Time</string>
    <string name="student_notificationscreen_msgbutton">Details</string>
    <string name="myfeedback_screen_title">Ready to submit Feedback</string>
    <string name="myfeedback_screen_button">Start</string>
    <string name="myfeedback_screen_title_rollno">Roll No</string>
    <string name="notification_title">Notifications</string>
    <string name="calendar_button">Go to Calendar</string>
    <string name="course_button">Go to Course Schedule</string>
    <string name="calendar_title">Academic Calendar</string>
    <string name="student_notification">Select the Type</string>
    <string name="show_calendar">Show Calendar</string>
    <string name="accademic_calendar_fall">Aademic Calendar Fall</string>
    <string name="fall">Fall</string>
    <string name="full_semester">(Full Semester Session:)</string>
    <string name="classes_begin">Classes Begin</string>
    <string name="semester_3">Semester III</string>
    <string name="semester_1">Semester I (Orientation Program)</string>
    <string name="semester_1_text">Semester I</string>
    <string name="semester_1_teaching">1st teaching session</string>
    <string name="mid_semester">Mid/End Semester Test</string>
    <string name="semester_13">Semester I and III</string>
    <string name="feedbacktitle">Feedback Module</string>
    <string name="feedbackadd"> Add Feedback</string>
    <string name="feedbackshow">Show Feedback</string>
    <string name="addfeedbacktitle">New Feedback</string>
    <string name="addfeedbackmaintitle"> Feedback Title</string>
    <string name="navigation_faculty_program_accademic_calendar">Academic Calendar</string>
    <string name="navigation_program_mycourses">My Courses</string>
    <string name="navigation_program_Attendance">My Attendance</string>
    <string name="navigation_program_myschedule">My Schedule</string>
    <string name="navigation_program_academiccalendar">Academic Calendar</string>
    <string name="navigation_program_myprofile">My Profile</string>
    <string name="navigation_program_enrollcourse">Enroll Course</string>
    <string name="navigation_program_specialization">Enroll Specialization</string>
</resources>