<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_program_home"
        android:icon="@drawable/ic_home"
        android:title="Home"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_courselist"
        android:icon="@drawable/ic_white_courselist"
        android:title="@string/navigation_program_courselist"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/navigation_program_schedule"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/navigation_program_calendar"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_picbook"
        android:icon="@drawable/ic_student_book"
        android:title="@string/navigation_program_picbook"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_addcourse"
        android:icon="@drawable/ic_add_course"
        android:title="@string/navigation_program_addcourse"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_removecourse"
        android:icon="@drawable/ic_remove_course"
        android:title="@string/navigation_program_removecourse"
        android:checkable="true"/>

    <item
        android:id="@+id/navigation_program_enrollstudent"
        android:icon="@drawable/ic_student"
        android:title="@string/navigation_program_enrollstudent"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_enrollfaculty"
        android:icon="@drawable/ic_faculty"
        android:title="@string/navigation_program_enrollfaculty"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/navigation_program_feedback"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_notification"
        android:icon="@drawable/ic_notifiication"
        android:title="@string/navigation_program_notification"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/navigation_program_logout"
        android:checkable="true"/>
</menu>
