<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_program_home"
        android:icon="@drawable/ic_home"
        android:title="Home"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_myprofile"
        android:icon="@drawable/ic_student_profile"
        android:title="@string/navigation_program_myprofile"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_mycourses"
        android:icon="@drawable/student_attendance"
        android:title="@string/navigation_program_mycourses"
        android:checkable="true"/>
    <!--<item
        android:id="@+id/navigation_program_coursefeedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/navigation_program_coursefeedback"
        android:checkable="true"/>-->
    <item
        android:id="@+id/navigation_program_Attendance"
        android:icon="@drawable/ic_student_attendance"
        android:title="@string/navigation_program_Attendance"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_myschedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/navigation_program_myschedule"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_academiccalendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/navigation_program_academiccalendar"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_specialization"
        android:icon="@drawable/ic_logout"
        android:title="@string/navigation_program_specialization"
        android:visible="false"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_enrollcourse"
        android:icon="@drawable/ic_logout"
        android:title="@string/navigation_program_enrollcourse"
        android:visible="false"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_notification"
        android:icon="@drawable/ic_notifiication"
        android:title="@string/navigation_program_notification"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_program_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/navigation_program_logout"
        android:checkable="true"/>
</menu>
