<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.thapar.newindialms.MainScreen">

    <!--Custom Toolbar for MainScreen-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/mainscreen_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/mainscreen_heading"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mainscreen_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:paddingTop="50dp"
            android:text="@string/mainscreen_subheading"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/mainscreen_image"
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="172dp"
            android:layout_gravity="center"
            android:contentDescription="@string/new_india_lms"
            android:padding="10dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/mainscreen_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp"
            android:text="@string/mainscreen_details"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/mainscreen_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ripple_effect_program_button"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/mainscreen_register"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mainscreen_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ripple_effect_program_button"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/mainscreen_Login"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
